# GraphMASAL

./: .gitignore  ARCHITECTURE.md  README.md  check_current_key.py  pyproject.toml  test.py  test_current_key.py  test_startup.py
data/: qa_sessions.db  router_eval_report.json
data_md/: Chapter 13. The Abstraction_Address Space__part_1_to_11.md  Chapter 14. Memory API_part_1_to_18.md  Chapter 16. Segmentation_part_1_to_17.md  Chapter 17. Free Space Management_part_1_to_24.md  Chapter 18. Paging Introduction__part_1_to_19.md  Chapter 19. Translation Lookaside Buffer_part_1_to_18.md  Chapter 20. Advanced Page Tables_part_1_to_19.md  Chapter 26. Concurrency An Introduction_part_1_to_32.md  Chapter 26. Intro to concurrency (Extra)_part_1_to_5.md  Chapter 28 & 29 Locks & CDS_part_1_to_40.md  Chapter 28 & 29 Locks & CDS_part_41_to_68.md  Chapter 28. Locks (Extra)_part_1_to_7.md  Chapter 30. Condition Variables_part_1_to_40.md  Chapter 30. Condition Variables_part_41_to_55.md  Chapter 31. Semaphore_part_1_to_40.md  Chapter 31. Semaphore_part_41_to_47.md  Chapter 32. Deadlocks (Common_Conc_Problems)_part_1_to_40.md  Chapter 32. Deadlocks (Common_Conc_Problems)_part_41_to_53.md  Chapter 39. File and Directories_part_1_to_35.md  Chapter 4 & 5. The Process Abtrasction & API_part_1_to_20.md  Chapter 40. File System Implementation_part_1_to_38.md  Chapter 6. Mechanism Limieted Direct Execution_part_1_to_22.md  Chapter 7. Scheduling Introduction_part_1_to_22.md  Chapter 8. Scheduling The Multi-level Feedback Queue_part_1_to_16.md  ISBN9798345587119_part_121_to_160.md  (+22 more)
public/: app.js  (+2 more)
(+32 files in other folders)
