[project]
name = "graphmasal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "distro>=1.9.0",
    "fastapi>=0.135.1",
    "graphviz>=0.20.3",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.11",
    "langgraph>=1.0.10",
    "langsmith>=0.2.0",
    "neo4j>=6.1.0",
    "networkx>=3.6.1",
    "openai>=2.28.0",
    "pydantic>=2.12.5",
    "pymongo>=4.16.0",
    "pymupdf>=1.27.2",
    "pypdf>=6.8.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "sentence-transformers>=5.2.3",
    "sse-starlette>=3.3.2",
    "streamlit>=1.44.0",
    "uvicorn>=0.41.0",
]
